expectedRoleNameWorkTypesMap added, tests updated and all passing